<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart.AddCart">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="364dp"
                        android:layout_height="151dp"
                        app:srcCompat="@drawable/pizzario2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:text="@string/cart"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="24dp"
                        android:entries="@array/item"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="24dp"
                        android:entries="@array/size"
                        tools:ignore="TouchTargetSizeCheck" />


                    <EditText
                        android:id="@+id/ord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:hint="@string/orders"
                        android:inputType="numberDecimal"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:hint="@string/desc"

                        android:inputType="text"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                        />

                    <Button
                        android:id="@+id/btn_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:backgroundTint="#F30606"
                        android:text="@string/cart"
                        android:textColor="@color/white"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>